Clean up and structure the code better

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             </div>
           </a>
 
-          <ul role="list" class="menu">
-            <li><a href="#" class="menu-link">Hem</a></li>
-            <li><a href="#" class="menu-link">Historik</a></li>
-            <li><a href="#" class="menu-link">Tips</a></li>
-            <li><a href="#" class="menu-link">Kontakt</a></li>
+          <ul role="list" class="header-menu">
+            <li><a href="#" class="header-menu-link">Hem</a></li>
+            <li><a href="#" class="header-menu-link">Historik</a></li>
+            <li><a href="#" class="header-menu-link">Tips</a></li>
+            <li><a href="#" class="header-menu-link">Kontakt</a></li>
           </ul>
 
-          <!-- Show Menu-icon for small device -->
-          <i class="fa-solid fa-bars menu-icon"></i>
+          <!-- Show menu-bars-icon for small device -->
+          <i class="fa-solid fa-bars menu-bars-icon"></i>
         </nav>
       </header>
 
@@ -100,6 +100,7 @@
                 type="email"
                 id="email"
                 placeholder="email@domain.com"
+                autocomplete="email"
                 required
               />
               <input
