--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/66"
+                  src="/Assets/images/avatars/coolio.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -196,7 +196,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/80"
+                  src="/Assets/images/avatars/anna-odlare.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -237,7 +237,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/5"
+                  src="/Assets/images/avatars/blomsterkalle.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -277,7 +277,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/56"
+                  src="/Assets/images/avatars/krydd-malin.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -317,7 +317,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/11"
+                  src="/Assets/images/avatars/gronis.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -356,7 +356,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/45"
+                  src="/Assets/images/avatars/naturvannen.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -398,7 +398,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/66"
+                  src="/Assets/images/avatars/coolio.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -439,7 +439,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/80"
+                  src="/Assets/images/avatars/anna-odlare.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -480,7 +480,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/5"
+                  src="/Assets/images/avatars/blomsterkalle.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -520,7 +520,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/56"
+                  src="/Assets/images/avatars/krydd-malin.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -560,7 +560,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/11"
+                  src="/Assets/images/avatars/gronis.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
@@ -599,7 +599,7 @@
             <footer class="card-footer display-flex align-items-center">
               <figure class="avatar">
                 <img
-                  src="https://avatar.iran.liara.run/public/45"
+                  src="/Assets/images/avatars/naturvannen.png"
                   alt="Profilbild på författaren"
                   class="author-img"
                 />
