Improve semantic html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <!-- Subscribe section -->
       <section class="newsletter flex-justify-center-container">
-        <article class="max-width display-flex flex-center">
+        <div class="max-width display-flex flex-center section-wrapper">
           <form class="subscribe-form">
             <h2>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
             <div class="input-container display-flex flex-space-between">
@@ -118,7 +118,7 @@
               alt="Fröpåse som det hälls frön ifrån. Plantering pågår."
             />
           </figure>
-        </article>
+        </div>
       </section>
 
       <!-- Main with productlist / productcards -->
@@ -140,11 +140,11 @@
               />
             </figure>
 
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-flower">Blommor</button>
-              <button class="btn category-btn bg-edible">Ätbart</button>
-              <button class="btn category-btn bg-green">Grönska</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-flower">Blommor</div>
+              <div class="category-tag bg-edible">Ätbart</div>
+              <div class="category-tag bg-green">Grönska</div>
+            </section>
 
             <h3>Gurka</h3>
             <p class="plant-description">
@@ -182,11 +182,11 @@
               />
             </figure>
 
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-sunloving">Solälskande</button>
-              <button class="btn category-btn bg-easy">Lättodlat</button>
-              <button class="btn category-btn bg-edible">Ätbart</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-sunloving">Solälskande</div>
+              <div class="category-tag bg-easy">Lättodlat</div>
+              <div class="category-tag bg-edible">Ätbart</div>
+            </section>
 
             <h3>Tomat</h3>
             <p class="plant-description">
@@ -223,12 +223,12 @@
               />
             </figure>
 
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-decorative">Dekorativ</button>
-              <button class="btn category-btn bg-colorful">Färgstark</button>
-              <button class="btn category-btn bg-robust">Tålig</button>
-              <button class="btn category-btn bg-flower">Blommor</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-decorative">Dekorativ</div>
+              <div class="category-tag bg-colorful">Färgstark</div>
+              <div class="category-tag bg-robust">Tålig</div>
+              <div class="category-tag bg-flower">Blommor</div>
+            </section>
             <h3>Pelargon</h3>
             <p class="plant-description">
               En vacker och lättskött blomma som trivs både inne och ute under
@@ -263,11 +263,11 @@
                 alt=""
               />
             </figure>
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-spicy">Kryddor</button>
-              <button class="btn category-btn bg-fragrant">Doftande</button>
-              <button class="btn category-btn bg-sunloving">Solälskande</button>
-            </div>
+            <section class="categories">
+              <button class="category-tag bg-spicy">Kryddor</button>
+              <button class="category-tag bg-fragrant">Doftande</button>
+              <button class="category-tag bg-sunloving">Solälskande</button>
+            </section>
 
             <h3>Basilika</h3>
             <p class="plant-description">
@@ -304,11 +304,11 @@
               />
             </figure>
 
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-fast">Snabbväxande</button>
-              <button class="btn category-btn bg-edible">Ätbart</button>
-              <button class="btn category-btn bg-green">Grönska</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-fast">Snabbväxande</div>
+              <div class="category-tag bg-edible">Ätbart</div>
+              <div class="category-tag bg-green">Grönska</div>
+            </section>
             <h3>Sallad</h3>
             <p class="plant-description">
               Sallad är en av de enklaste grönsakerna att odla och ger snabba
@@ -343,11 +343,11 @@
                 alt=""
               />
             </figure>
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-air">Luftfuktande</button>
-              <button class="btn category-btn bg-green">Grönska</button>
-              <button class="btn category-btn bg-decorative">Dekorativ</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-air">Luftfuktande</div>
+              <div class="category-tag bg-green">Grönska</div>
+              <div class="category-tag bg-decorative">Dekorativ</div>
+            </section>
             <h3>Ormbunke</h3>
             <p class="plant-description">
               En klassisk växt som passar perfekt i badrummet eller på skuggiga
@@ -383,11 +383,11 @@
               />
             </figure>
 
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-flower">Blommor</button>
-              <button class="btn category-btn bg-edible">Ätbart</button>
-              <button class="btn category-btn bg-green">Grönska</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-flower">Blommor</div>
+              <div class="category-tag bg-edible">Ätbart</div>
+              <div class="category-tag bg-green">Grönska</div>
+            </section>
 
             <h3>Gurka</h3>
             <p class="plant-description">
@@ -425,11 +425,11 @@
               />
             </figure>
 
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-sunloving">Solälskande</button>
-              <button class="btn category-btn bg-easy">Lättodlat</button>
-              <button class="btn category-btn bg-edible">Ätbart</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-sunloving">Solälskande</div>
+              <div class="category-tag bg-easy">Lättodlat</div>
+              <div class="category-tag bg-edible">Ätbart</div>
+            </section>
 
             <h3>Tomat</h3>
             <p class="plant-description">
@@ -466,12 +466,12 @@
               />
             </figure>
 
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-decorative">Dekorativ</button>
-              <button class="btn category-btn bg-colorful">Färgstark</button>
-              <button class="btn category-btn bg-robust">Tålig</button>
-              <button class="btn category-btn bg-flower">Blommor</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-decorative">Dekorativ</div>
+              <div class="category-tag bg-colorful">Färgstark</div>
+              <div class="category-tag bg-robust">Tålig</div>
+              <div class="category-tag bg-flower">Blommor</div>
+            </section>
             <h3>Pelargon</h3>
             <p class="plant-description">
               En vacker och lättskött blomma som trivs både inne och ute under
@@ -506,11 +506,11 @@
                 alt=""
               />
             </figure>
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-spicy">Kryddor</button>
-              <button class="btn category-btn bg-fragrant">Doftande</button>
-              <button class="btn category-btn bg-sunloving">Solälskande</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-spicy">Kryddor</div>
+              <div class="category-tag bg-fragrant">Doftande</div>
+              <div class="category-tag bg-sunloving">Solälskande</div>
+            </section>
 
             <h3>Basilika</h3>
             <p class="plant-description">
@@ -547,11 +547,11 @@
               />
             </figure>
 
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-fast">Snabbväxande</button>
-              <button class="btn category-btn bg-edible">Ätbart</button>
-              <button class="btn category-btn bg-green">Grönska</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-fast">Snabbväxande</div>
+              <div class="category-tag bg-edible">Ätbart</div>
+              <div class="category-tag bg-green">Grönska</div>
+            </section>
             <h3>Sallad</h3>
             <p class="plant-description">
               Sallad är en av de enklaste grönsakerna att odla och ger snabba
@@ -586,11 +586,11 @@
                 alt=""
               />
             </figure>
-            <div class="category-btn-container">
-              <button class="btn category-btn bg-air">Luftfuktande</button>
-              <button class="btn category-btn bg-green">Grönska</button>
-              <button class="btn category-btn bg-decorative">Dekorativ</button>
-            </div>
+            <section class="categories">
+              <div class="category-tag bg-air">Luftfuktande</div>
+              <div class="category-tag bg-green">Grönska</div>
+              <div class="category-tag bg-decorative">Dekorativ</div>
+            </section>
             <h3>Ormbunke</h3>
             <p class="plant-description">
               En klassisk växt som passar perfekt i badrummet eller på skuggiga
@@ -616,7 +616,7 @@
 
       <!-- Inspiration section -->
       <section class="plants-inspiration flex-justify-center-container">
-        <article class="max-width display-flex flex-center">
+        <div class="max-width display-flex flex-center section-wrapper">
           <figure class="circle-background">
             <img
               height="90"
@@ -635,7 +635,7 @@
             </p>
             <button class="btn cta-btn">Planterade plantor</button>
           </section>
-        </article>
+        </div>
       </section>
 
       <!-- Footer of the page -->
